--- a/Page_2_statistique_des_performances.html
+++ b/Page_2_statistique_des_performances.html
@@ -1,10 +1,13 @@
-
 <!DOCTYPE html>
 <html> 
     <head>
         <meta charset="utf-8">
         <title>Suivi_sportif</title>
-        <link rel="stylesheet" href="Page_0_principale.css">
+        <link rel="stylesheet" href="Page_3_statistique_des_performances.css">
+        <!--lien pour la typo-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -16,12 +19,7 @@
                     Suivie</a></li>
                 <li><a href="Page_2_statistique_des_performances.html" class="lien page3">
                     Statistiques</a></li>
-                <li><a class="co">Inscription</a></li>
-                <li><a class="co">Connexion</a></li>
             </ul>
-            <div class="logo">
-                <img src="muscle1.png" title="tout mimi" alt="dragon">
-            </div>
         </header>
     </body>
 </html>
